--- a/SLBr/App.xaml
+++ b/SLBr/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="SLBr.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SLBr"
-             StartupUri="SplashScreen.xaml" Startup="Application_Startup">
+             xmlns:local="clr-namespace:SLBr">
     <Application.Resources>
-        <ResourceDictionary Source="StyleResourceDictionary.xaml"/>
+        <ResourceDictionary Source="WinUIStyleDictionary.xaml"/>
     </Application.Resources>
 </Application>
