--- a/SLBr/Controls/CredentialsDialogWindow.xaml
+++ b/SLBr/Controls/CredentialsDialogWindow.xaml
@@ -14,7 +14,7 @@
         <Border.Effect>
             <DropShadowEffect Direction="-75" ShadowDepth="1" Opacity="0.5" BlurRadius="15" Color="Gray"/>
         </Border.Effect>
-        <Border Background="{DynamicResource PrimaryBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5" Margin="10">
+        <Border Background="{StaticResource PrimaryBrush}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" CornerRadius="5" Margin="10">
             <Grid Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -22,7 +22,6 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-
                 <DockPanel Margin="0,0,0,10" Grid.Row="0" Height="Auto">
                     <TextBlock x:Name="QuestionIcon" FontSize="18" FontFamily="Segoe Fluent Icons" Margin="0,0,5,0">&#xe946;</TextBlock>
                     <Label Name="QuestionText" Margin="0,0,0,0" Padding="0" FontWeight="Medium" FontSize="14">Question</Label>
@@ -35,7 +34,6 @@
                     <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" Width="55">Password</TextBlock>
                     <PasswordBox Name="PasswordTextBox" Grid.Row="1" MinWidth="250" Width="Auto"></PasswordBox>
                 </DockPanel>
-
                 <WrapPanel Grid.Row="3" HorizontalAlignment="Right" Margin="0">
                     <Button IsDefault="True" Name="btnDialogOk" Click="DialogOk_Click" MinWidth="60">Sign In</Button>
                     <Button IsCancel="True" MinWidth="60" Margin="10,0,0,0">Cancel</Button>
