--- a/SLBr/Controls/PromptDialogWindow.xaml
+++ b/SLBr/Controls/PromptDialogWindow.xaml
@@ -14,7 +14,7 @@
         <Border.Effect>
             <DropShadowEffect Direction="-75" ShadowDepth="1" Opacity="0.5" BlurRadius="15" Color="Gray"/>
         </Border.Effect>
-        <Border Background="{DynamicResource PrimaryBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5" Margin="10">
+        <Border Background="{StaticResource PrimaryBrush}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" CornerRadius="5" Margin="10">
             <Grid Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -33,8 +33,8 @@
                 </StackPanel>
 
                 <WrapPanel Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                    <Button BorderBrush="{DynamicResource BorderBrush}" IsDefault="True" Name="btnDialogOk" Click="DialogOk_Click" MinWidth="60">OK</Button>
-                    <Button BorderBrush="{DynamicResource BorderBrush}" IsCancel="True" MinWidth="60" Margin="10,0,0,0">Cancel</Button>
+                    <Button BorderBrush="{StaticResource BorderBrush}" IsDefault="True" Name="btnDialogOk" Click="DialogOk_Click" MinWidth="60">OK</Button>
+                    <Button BorderBrush="{StaticResource BorderBrush}" IsCancel="True" MinWidth="60" Margin="10,0,0,0">Cancel</Button>
                 </WrapPanel>
             </Grid>
         </Border>
